After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784812 - Can't play quicktime animation files (RLE) in Windows 64bit
Can't play quicktime animation files (RLE) in Windows 64bit
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.12.1
Other Windows
: Normal blocker
: 1.12.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-11 18:50 UTC by Gordon Nickel
Modified: 2017-07-13 09:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Gordon Nickel 2017-07-11 18:50:54 UTC
* In windows 64-bit 1.12.0 and 1.12.1, Quicktime Animation RLE files no longer play using gst-launch-1.0.exe using playbin. 

* The output reports a missing plugin, but running "gst-inspect-1.0.exe avdec_qtrle" shows that that plugin is available. 

* Using 1.10.X and below on 64bit Windows successfully runs the video. 

* Output below:

gst-launch-1.0.exe playbin uri=file:///d:/path/to/video.mov

Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
Missing element: Run-length encoding decoder
WARNING: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0: No decoder available for type 'video/x-rle, layout=(string)quicktime, depth=(int)0, width=(int)1048, height=(int)678, framerate=(fraction)30000/1001, pixel-aspect-ratio=(fraction)1/1'.
Additional debug info:
gsturidecodebin.c(931): unknown_type_cb (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0
ERROR: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0: Your GStreamer installation is missing a plug-in.
Additional debug info:
gsturidecodebin.c(998): no_more_pads_full (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0:
no suitable plugins found:
gstdecodebin2.c(4600): gst_decode_bin_expose (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0:
no suitable plugins found:
Missing decoder: Run-length encoding (video/x-rle, layout=(string)quicktime, depth=(int)0, width=(int)1048, height=(int)678, framerate=(fraction)30000/1001, pixel-aspect-ratio=(fraction)1/1)

ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
Freeing pipeline ...
Comment 1 Sebastian Dröge (slomo) 2017-07-12 15:30:46 UTC
Can you provide a sample file for this?
Comment 2 Gordon Nickel 2017-07-12 16:11:03 UTC
Sure thing! Really appreciate all the work you guys do on Gstreamer!

Here's a QT Animation video that's showing the exact issue as above:
https://downstream.box.com/s/dxej0xpbfft78rzfnkci0h94fjudd7qz

I noticed today that the depth of that video is being detected as 0, when it should be 16. Though versions <= 1.10.X still play it. 

Here's another QT Animation file that plays, and the depth is detected at 16, but the output is garbled:
https://downstream.box.com/s/dm6fqvsf80bgmp87hp2yjqh68vwcyj9c
Comment 3 Sebastian Dröge (slomo) 2017-07-13 09:48:05 UTC
commit c0318f3d6070a944986f212c04becef32d18f5f3 (HEAD -> master, origin/master, origin/HEAD)
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Thu Jul 13 12:47:02 2017 +0300

    qtdemux: Fix parsing of RLE depth
    
    Regression introduced by 86b427dc70562f891a551ffc9f96cefe1cafcddd
    
    https://bugzilla.gnome.org/show_bug.cgi?id=784812