qtdemux: Fix parsing of RLE depth

Regression introduced by 86b427dc70562f891a551ffc9f96cefe1cafcddd

https://bugzilla.gnome.org/show_bug.cgi?id=784812